fix: main pointing to right file name

--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
   "name": "vue-openapi",
-  "version": "0.1.0",
-  "description": "",
-  "main": "OpenAPI.vue",
+  "version": "0.1.1",
+  "description": "Display API documentation that follow the OpenAPI 3.0 Specification",
+  "keywords": ["vue", "material", "openapi", "api", "documentation", "swagger"],
+  "author": {
+    "name": "Koumoul",
+    "email": "support@koumoul.com",
+    "url": "https://koumoul.com/"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/koumoul-dev/vue-openapi.git"
+  },
+  "main": "OpenApi.vue",
   "scripts": {
     "dev": "NODE_ENV=development webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-eslint": "^7.1.1",
