--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "vue-openapi",
   "version": "0.1.1",
   "description": "Display API documentation that follow the OpenAPI 3.0 Specification",
-  "keywords": ["vue", "material", "openapi", "api", "documentation", "swagger"],
+  "keywords": [
+    "vue",
+    "material",
+    "openapi",
+    "api",
+    "documentation",
+    "swagger"
+  ],
   "author": {
     "name": "Koumoul",
     "email": "support@koumoul.com",
@@ -17,6 +24,11 @@
   "scripts": {
     "dev": "NODE_ENV=development webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "lodash.get": "^4.4.2",
+    "vue-material": "^0.7.1",
+    "vue-resource": "^1.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
@@ -38,12 +50,10 @@
     "json-loader": "^0.5.4",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "vue": "^2.1.3",
+    "vue": "2.2.1",
     "vue-loader": "^10.0.1",
-    "vue-material": "^0.7.1",
-    "vue-resource": "^1.0.3",
     "vue-style-loader": "^1.0.0",
-    "vue-template-compiler": "^2.1.3",
+    "vue-template-compiler": "2.2.1",
     "webpack": "^1.13.3"
   }
 }
