--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "type": "git",
     "url": "https://github.com/koumoul-dev/vue-openapi.git"
   },
-  "main": "OpenApi.vue",
+  "main": "src/OpenApi.vue",
   "scripts": {
     "dev": "NODE_ENV=development webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
