--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "main": "src/OpenApi.vue",
   "scripts": {
-    "dev": "NODE_ENV=development webpack --watch",
+    "dev": "cross-env NODE_ENV=development webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -41,6 +41,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.18.0",
     "browser-sync": "^2.18.2",
+    "cross-env": "^5.0.0",
     "css-loader": "^0.26.0",
     "eslint": "^3.11.0",
     "eslint-config-standard": "^6.2.1",
@@ -53,10 +54,10 @@
     "json-loader": "^0.5.4",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "vue": "2.2.1",
-    "vue-loader": "^10.0.1",
+    "vue": "^2.2.1",
+    "vue-loader": "^11.1.4",
     "vue-style-loader": "^1.0.0",
-    "vue-template-compiler": "2.2.1",
-    "webpack": "^1.13.3"
+    "vue-template-compiler": "^2.2.1",
+    "webpack": "^2.2.0"
   }
 }
