--- a/package.json
+++ b/package.json
@@ -27,37 +27,37 @@
   },
   "dependencies": {
     "json-formatter-js": "^2.2.0",
-    "json-schema-deref-local": "^0.2.1",
+    "json-schema-ref-parser": "^5.0.3",
     "json-schema-view-js": "^1.0.1",
-    "marked": "^0.3.9",
+    "marked": "^0.3.19",
     "vue-material": "^0.8.1",
-    "vue-resource": "^1.3.5"
+    "vue-resource": "^1.5.1"
   },
   "devDependencies": {
-    "babel-core": "^6.18.2",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.8",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.18.0",
-    "browser-sync": "^2.23.3",
-    "cross-env": "^5.1.3",
+    "browser-sync": "^2.24.5",
+    "cross-env": "^5.2.0",
     "css-loader": "^0.26.0",
     "eslint": "^3.11.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^2.0.6",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-html": "^1.7.0",
-    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^2.0.1",
     "file-loader": "^0.9.0",
     "json-loader": "^0.5.4",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "vue": "^2.5.13",
+    "vue": "^2.5.16",
     "vue-loader": "^11.1.4",
     "vue-style-loader": "^1.0.0",
-    "vue-template-compiler": "^2.5.13",
+    "vue-template-compiler": "^2.5.16",
     "webpack": "^2.2.0"
   }
 }
