--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "form-data": "^2.3.3",
     "json-formatter-js": "^2.2.0",
     "json-schema-ref-parser": "^5.0.3",
     "json-schema-view-js": "^1.0.1",
