--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-openapi",
+  "name": "@koumoul/vue-openapi",
   "version": "0.10.0",
   "description": "Display API documentation that follow the OpenAPI 3.0 Specification",
   "keywords": [
